--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "joi": "^17.7.0",
     "mongoose": "^5.13.15",
     "nodemailer": "^6.8.0",
     "uuid": "^9.0.0"
